# vs-jetpack

./: CONTRIBUTING.md  README.md  justfile  mkdocs.yml  prek.toml  pyproject.toml  requirements.txt
.github/actions/setup-akarin/: action.yml
.github/workflows/: autotag.yml  docs.yml  lint.yml  pypipublish.yml  test.yml
scripts/: _vapoursynth_template.pyi  fix_tensorrt_stubs.py  gen_ref_pages.py  gen_stubs.py
stubs/: vsmlrt.pyi
stubs/onnxconverter_common/: __init__.pyi  _opt_const_folding.pyi  auto_mixed_precision.pyi  auto_mixed_precision_model_path.pyi  case_insensitive_dict.pyi  container.pyi  data_types.pyi  decast.pyi  float16.pyi  interface.pyi  metadata_props.pyi  onnx2py.pyi  onnx_ex.pyi  onnx_fx.pyi  onnx_ops.pyi  oopb.pyi  optimizer.pyi  perfstats.pyi  pytracing.pyi  registration.pyi  shape_calculator.pyi  topology.pyi  tree_ensemble.pyi  utils.pyi
stubs/tensorrt/: __init__.pyi
stubs/tensorrt_bindings/: __init__.pyi  tensorrt.pyi
stubs/tensorrt_rtx/: __init__.pyi
stubs/tensorrt_rtx_bindings/: __init__.pyi  tensorrt_rtx.pyi
stubs/vapoursynth/: __init__.pyi  _enums.pyi  _env.pyi  _formats.pyi  _frames.pyi  _functions.pyi  _logging.pyi  _nodes.pyi
stubs/vspreview/main/: window.pyi
tests/: conftest.py
tests/vsdenoise/: test_denoise.py  test_funcs.py
tests/vsdenoise/mvtools/: test_motion.py  test_mvtools.py  test_presets.py  test_utils.py
tests/vsexprtools/: test_exprop.py  test_exprtools_funcs.py  test_inline.py
tests/vskernels/: test_kernels.py
tests/vsmasktools/: test_morpho.py
tests/vsscale/: test_settings.py
tests/vstools/enums/: test_color.py  test_generic.py  test_other.py
tests/vstools/functions/: test_clip.py  test_funcs.py  test_heuristics.py  test_normalize.py  test_timecodes.py  test_utils.py
tests/vstools/utils/: test_clips.py  test_info.py  test_padder.py  test_props.py  test_scale.py
tests/vstools/vs_proxy/: test_objects.py  test_proxy.py
vsaa/: __init__.py  abstract.py  abstract2.py  deinterlacers.py  funcs.py
vsaa/antialiasers/: eedi2.py  eedi3.py  nnedi3.py  sangnom.py
vsdeband/: __init__.py  debanders.py  f3kdb.py  filters.py  funcs.py  mask.py  noise.py  placebo.py  types.py
vsdehalo/: alpha.py  border.py  denoise.py  mask.py  warp.py
vsdeinterlace/: blending.py  enums.py  funcs.py  ivtc.py  qtgmc.py  utils.py
vsdenoise/: blockmatch.py  deblock.py  fft.py  freqs.py  funcs.py  nlm.py  postprocess.py  prefilters.py  regress.py
vsdenoise/mvtools/: __init__.py  enums.py  motion.py  mvtools.py  presets.py  types.py  utils.py
vsexprtools/: error.py  exprop.py  funcs.py  util.py
vsexprtools/inline/: error.py  helpers.py  manager.py  operators.py  polyfills.py  variables.py
vsjetpack/: __init__.py  _loader.py  _modules.py  helpers.py  logging.py  types.py
vskernels/: __init__.py  docs.py  types.py  util.py
vskernels/abstract/: __init__.py  abstract.py  base.py  complex.py  custom.py
vskernels/kernels/: __init__.py  abstract.py  bicubic.py  complex.py  custom.py  docs.py  helpers.py  placebo.py  resize.py  spline.py  various.py  zimg.py
vskernels/kernels/custom/: bicubic.py  spline.py  various.py
vskernels/kernels/zimg/: __init__.py  abstract.py  bicubic.py  spline.py  various.py
vsmasktools/: abstract.py  details.py  diff.py  edge_funcs.py  hardsub.py  masks.py  morpho.py  spat_funcs.py  types.py  utils.py
vsmasktools/edge/: _3x3.py  _5x5.py  _abstract.py
vsrgtools/: __init__.py  blur.py  contra.py  enum.py  freqs.py  limit.py  regress.py  rgtools.py  sharp.py  util.py
vsrgtools/aka_expr/: __init__.py  _rg.py  _rp.py
vsrgtools/rg_expr/: __init__.py  _rg.py  _rp.py
vsscale/: __init__.py  generic.py  helpers.py  mask.py  onnx.py  rescale.py  shaders.py  various.py
vsscale/mlrt/: __init__.py  cli.py  feeds.py  settings.py
vsscale/mlrt/backend/: __init__.py  _trt.py  _trt_rtx.py  base.py  migx.py  ncnn.py  ort.py  ov.py  trt.py
vssource/: __init__.py  funcs.py  rff.py
vssource/formats/dvd/: IsoFile.py  title.py
vssource/formats/dvd/parsedvd/: timespan.py
vssource/indexers/: D2VWitch.py  base.py  misc.py
vstools/: __init__.py
vstools/enums/: base.py  color.py  funcs.py  generic.py  other.py  stubs.py
vstools/exceptions/: color.py  generic.py
vstools/functions/: check.py  clip.py  clips.py  funcs.py  heuristics.py  normalize.py  packets.py  ranges.py  render.py  timecodes.py  utils.py
vstools/functions/render/: progress.py  render.py
vstools/types/: generic.py
vstools/utils/: __init__.py  cache.py  clips.py  file.py  gpu.py  info.py  misc.py  props.py  ranges.py  scale.py  vs_proxy.py
vstools/vs_proxy/: __init__.py  exception.py  objects.py  proxy.py
