[project]
name = "vsjetpack"
dynamic = ["version"]
description = "Full suite of filters, wrappers, and helper functions for filtering video using VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jaded Encoding Thaumaturgy"}
]
maintainers = [
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "VapourSynth>=67",
    "jetpytools~=1.4.0",
    "numpy>=2.0.0",
    "rich>=12.6.0",
    "scipy>=1.10.0",
    "typing_extensions>=4.12.2",
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "packaging>=24.0",
    "pycodestyle>=2.11.1",
    "pytest>=8.3.4, <9.0.0",
    "pytest-cov>=6.0.0, <7.0.0",
    "ruff>=0.11.9",
    "scipy-stubs>=1.15.2.1",
    "types-psutil>=7.0.0.20250218",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=[
    "vstools",
    "vstools.enums",
    "vstools.exceptions",
    "vstools.functions",
    "vstools.types",
    "vstools.utils",

    "vskernels",
    "vskernels.abstract",
    "vskernels.kernels",
    "vskernels.kernels.custom",
    "vskernels.kernels.zimg",

    "vsexprtools",

    "vsrgtools",
    "vsrgtools.aka_expr",

    "vsmasktools",
    "vsmasktools.edge",

    "vsaa",

    "vsscale",

    "vsdenoise",
    "vsdenoise.mvtools",

    "vsdehalo",

    "vsdeband",

    "vsdeinterlace",

    "vssource",
    "vssource.indexers",
    "vssource.formats",
    "vssource.formats.bd",
    "vssource.formats.dvd",
    "vssource.formats.dvd.parsedvd",
]
include = [
    "vstools/py.typed",
    "vstools/utils/*.json",
    "vskernels/py.typed",
    "vsexprtools/py.typed",
    "vsrgtools/py.typed",
    "vsmasktools/py.typed",
    "vsaa/py.typed",
    "vsscale/py.typed",
    "vsdenoise/py.typed",
    "vsdehalo/py.typed",
    "vsdeband/py.typed",
    "vsdeinterlace/py.typed",
    "vssource/py.typed",
]
exclude = ["docs", "scripts", "site", "stubs", "tests"]

[tool.hatch.build.targets.sdist]
exclude = ["docs", "scripts", "site", "stubs", "tests"]

[tool.hatch.version]
path = "_metadata.py"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

ignore_missing_imports = false

disallow_any_generics = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true

show_error_context = false
show_column_numbers = true
show_error_codes = true
color_output = true
error_summary = true
pretty = true