[build-system]
requires = ["hatchling>=1.27.0", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsjetpack"
dynamic = ["version"]
description = "Full suite of filters, wrappers, and helper functions for filtering video using VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jaded Encoding Thaumaturgy" }]
maintainers = [
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
keywords = [
    "vapoursynth",
    "video",
    "encoding",
    "wrappers",
    "helpers",
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "vapoursynth>=75",
    "jetpytools>=3.0.0,<4.0.0",
    "numpy>=2.0.0",
    "rich>=15.0.0",
    "psutil>=7.0.0",
    "typing_extensions>=4.15.0; python_version<'3.13'",
    # VapourSynth plugins
    "vapoursynth-akarin>=1.4.1",
    "vapoursynth-fmtconv>=31",
    "vapoursynth-vszip>=14.0.0",
]

[project.urls]
Documentation = "https://jaded-encoding-thaumaturgy.github.io/vs-jetpack/"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack"
Tracker = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[project.scripts]
vsscale = "vsscale.mlrt.cli:app.meta"

[project.optional-dependencies]
basic = []
source = [
    "vsjetpack[basic]",
    "vapoursynth-bestsource>=17.0",
    "vapoursynth-d2vsource>=1.4",
    "vapoursynth-dvdsrc2>=3.0",
    "vapoursynth-ffms2>=5.2.0",
    "vapoursynth-lsmas>=1282.0.0",
]
kernels = [
    "vsjetpack[basic]",
    "vapoursynth-resize2>=0.4.2",
    "vapoursynth-descale>=12",
    "vs-placebo>=2.0.2",
]
expr = ["vsjetpack[basic]"]
rg = [
    "vsjetpack[kernels]",
    "vsjetpack[expr]",
    "scipy>=1.17.0",
    "vapoursynth-awarp>=3.0",
    "vapoursynth-zsmooth>=0.18.0",
]
mask = [
    "vsjetpack[source]",
    "vsjetpack[rg]",
    "vapoursynth-adaptivegrain>=0.5.0",
    "vapoursynth-edgemasks>=4.0",
    "vapoursynth-hysteresis>=1.1.3",
    "vapoursynth-subtext>=6.0",
]
scale = [
    "vsjetpack[mask]",
    "anyio>=4.13.0",
    "cyclopts>=4.15.0",
    "device-smi>=0.5.6",
    "humanize>=4.15.0",
    "questionary>=2.1.0",
    "niquests>=3.18.8",
    "packaging>=26.0",
    "platformdirs>=4.9.6",
    "vapoursynth-mlrt-ov>=15.16",
]
aa = [
    "vsjetpack[scale]",
    "vapoursynth-bwdif>=5.0",
    "vapoursynth-eedi3>=9.0",
    "vapoursynth-sangnom>=43",
    "vapoursynth-sneedif>=4.2",
    "vapoursynth-znedi3>=2.1",
]
denoise = [
    "vsjetpack[aa]",
    "vapoursynth-bm3d>=10.0",
    "vapoursynth-bm3dcpu>=2.16.4 ; (platform_machine == 'x86_64' or platform_machine == 'AMD64') and (platform_system == 'Linux' or platform_system == 'Windows')",
    "vapoursynth-bm3dmetal>=4.0.0 ; platform_system == 'Darwin'",
    "dfttest2[gcc]>=10 ; platform_machine != 'x86_64' and platform_machine != 'AMD64'",
    "dfttest2[cpu]>=10 ; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
    "vapoursynth-deblock>=8.0",
    "vapoursynth-manipmv>=1.3.0",
    "vapoursynth-mvtools>=26",
    "vapoursynth-nlm-ispc>=3",
    "vapoursynth-wnnm>=3 ; platform_system == 'Linux' or platform_system == 'Windows'",
]
dehalo = ["vsjetpack[denoise]"]
deinterlace = [
    "vsjetpack[denoise]",
    "vapoursynth-dmetrics>=2.0",
    "vapoursynth-vivtc>=2.0",
]
deband = ["vsjetpack[denoise]", "vsnoise>=1.2"]
cl = [
    "vapoursynth-mlrt-ort>=15.16",
    "vapoursynth-mlrt-ncnn>=15.16",
    "vapoursynth-knlmeanscl>=1.2",
]
nvidia = [
    "onnx>=1.21.0",
    "onnxconverter-common>=1.16.0",
    "cuda-python>=13.0.0,<14.0.0",
    "ml-dtypes>=0.5.4",
    # Vapoursynth plugins
    "dfttest2[cufft,nvrtc]>=10",
    "vapoursynth-bm3dcuda>=2.16",
    "vapoursynth-bilateralgpu>=14",
    "vapoursynth-nlm-cuda>=4",
    "vapoursynth-mlrt-ort-cuda>=15.16.2",
    "vapoursynth-mlrt-trt>=15.16.1",
    "vapoursynth-mlrt-trt-rtx>=15.16.1",
    "tensorrt-cu13>=11.0.0.114",
    "tensorrt-rtx-cu13>=1.5.0.114",
    # Explicitly specify these so they're properly resolved through uv --index
    "tensorrt-cu13-bindings",
    "tensorrt-cu13-libs",
    "tensorrt-rtx-cu13-bindings",
]
amd = [
    "vsjetpack[cl]",
    "dfttest2[hipfft,hiprtc]>=10",
    "vapoursynth-bm3dhip>=2.16",
    "vapoursynth-mlrt-migx>=15.16 ; platform_system == 'Linux'",
    "vapoursynth-nlm-hip>=2",
]
full = [
    "vsjetpack[basic]",
    "vsjetpack[source]",
    "vsjetpack[kernels]",
    "vsjetpack[expr]",
    "vsjetpack[rg]",
    "vsjetpack[mask]",
    "vsjetpack[scale]",
    "vsjetpack[aa]",
    "vsjetpack[denoise]",
    "vsjetpack[dehalo]",
    "vsjetpack[deinterlace]",
    "vsjetpack[deband]",
]

[dependency-groups]
dev = [
    "mypy~=2.1.0",
    "ruff~=0.15.0",
    "prek>=0.3.6",
    "scipy-stubs>=1.16.0.0",
    "types-psutil>=7.0.0.20250801",
    # Needed for the folder "scripts"
    "mkdocs-gen-files==0.6.1",
    "vstransitions==0.1.4",
    "orderedsets",
    "pybind11-stubgen>=2.5.5",
    "vsstubs>=2.1.1",
    { include-group = "test" },
]
test = ["pytest>=9.0.0, <10.0.0", "pytest-cov>=6.2.1, <8.0.0"]
doc = [
    "orderedsets",
    "griffe-inherited-docstrings==1.1.3",
    "mkdocs-gen-files==0.6.1",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-material==9.7.6",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.3",
    "mkdocstrings[python]==0.30.1",

    # Used by mkdocstrings to format signatures.
    "ruff~=0.15.0",

    # Additional packages to be documented.
    "vstransitions==0.1.4",
]

[tool.vsscale.onnx.download]
provider = ["ArtCNN==v1.6.2", "DPIR==20210902", "Waifu2x==20250502-2"]
auto = true

[tool.uv.sources]
vapoursynth-ffms2 = { index = "vs-wheels" }
vapoursynth-fmtconv = { index = "vs-wheels" }
tensorrt-cu13-bindings = [
    { index = "vs-wheels", marker = "python_version == '3.14'" },
]
tensorrt-cu13-libs = { index = "nvidia" }
tensorrt-rtx-cu13-bindings = [
    { index = "vs-wheels", marker = "python_version == '3.14'" },
]

[[tool.uv.index]]
# Not exactly necessary since nvidia wheels are also published on pypi as wheel stub (generic sdist)
# but we skip pypi entirely with this and uv reports a actual progress bar instead of a generic "Building..."
# since it's technically building the wheel stub (just a sdist)
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "vs-wheels"
url = "https://jaded-encoding-thaumaturgy.github.io/vs-wheels/simple"
explicit = true

[tool.hatch.build]
artifacts = ["vsjetpack/_version.py"]

[tool.hatch.build.targets.wheel]
packages = [
    "vsjetpack",
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
exclude = ["docs", "scripts", "site", "stubs", "tests", "README.*"]

[tool.hatch.build.targets.sdist]
include = [
    "docs",
    "scripts",
    "stubs",
    "tests",
    "vsaa",
    "vsdeband",
    "vsdehalo",
    "vsdeinterlace",
    "vsdenoise",
    "vsexprtools",
    "vsjetpack",
    "vskernels",
    "vsmasktools",
    "vsrgtools",
    "vsscale",
    "vssource",
    "vstools",
    "_version.py",
    "mkdocs.yml",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"
next-version = "minor"
write = { file = "vsjetpack/_version.py", template = "__version__ = \"{normalized_version}\"\n__version_tuple__ = {version_tuple}" }

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

files = [
    "scripts",
    "stubs",
    "tests",
    "vsaa",
    "vsdeband",
    "vsdehalo",
    "vsdeinterlace",
    "vsdenoise",
    "vsexprtools",
    "vsjetpack",
    "vskernels",
    "vsmasktools",
    "vsrgtools",
    "vsscale",
    "vssource",
    "vstools",
]

exclude_gitignore = true
exclude = [
    "stubs/onnxconverter_common",
    "stubs/tensorrt",
    "stubs/tensorrt_bindings",
    "stubs/tensorrt_rtx",
    "stubs/tensorrt_rtx_bindings",
    "vsscale/mlrt/backend",        # https://github.com/python/mypy/pull/20521
]

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true
fixed_format_cache = true

[[tool.mypy.overrides]]
module = "onnxconverter_common.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorrt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorrt_bindings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorrt_rtx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorrt_rtx_bindings.*"
ignore_missing_imports = true

# https://github.com/python/mypy/pull/20521
[[tool.mypy.overrides]]
module = ["vsscale.mlrt.backend.*"]
follow_imports = "skip"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = [
    "stubs/dfttest2.pyi",
    "stubs/vsmlrt.pyi",
    "stubs/onnxconverter_common/**",
]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "UP",
    "FURB",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
"stubs/*" = ["PYI021", "E501", "N801", "N802", "N803", "RUF002"]
